objects/SVMXC__RMA_Shipment_Order__c.object
<CustomObject>
    <fields>
        <fullName>BD_Loaner_Equipment_External_Id__c</fullName>
        <label>Loaner Equipment External Id</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BD_Loaner_Equipment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Loaner Equipment</label>
        <referenceTo>SVMXC__Installed_Product__c</referenceTo>
        <relationshipLabel>Parts Orders</relationshipLabel>
        <relationshipName>Parts_Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BD_Maintenance_Plant__c</fullName>
        <label>Maintenance Plant</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BD_SAP_Delivery_Number__c</fullName>
        <label>SAP Delivery Number</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BD_SAP_Return_Delivery_Number__c</fullName>
        <label>SAP Return Delivery Number</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BD_SAP_Return_Number__c</fullName>
        <label>SAP Return Number</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Description_for_Customer__c</fullName>
        <label>Description for Customer</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>FCO_Lines__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>FCO Line</label>
        <referenceTo>FCO_Lines__c</referenceTo>
        <relationshipLabel>Parts Orders</relationshipLabel>
        <relationshipName>Parts_Orders1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Instance_URL__c</fullName>
        <formula>LEFT($Api.Partner_Server_URL_360, FIND( &apos;/services&apos;, $Api.Partner_Server_URL_360))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Instance URL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>FCO</description>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Parts Orders</relationshipLabel>
        <relationshipName>Parts_Orders1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Contact_Name__c</fullName>
        <description>Denotes the Contact Name related to the parts order</description>
        <inlineHelpText>Denotes the Contact Name related to the parts order</inlineHelpText>
        <label>Contact Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Contact_Phone__c</fullName>
        <description>Field Character Limit: 30 Characters
Denotes the contact phone for the parts order</description>
        <inlineHelpText>Field Character Limit: 30 Characters
Denotes the contact phone for the parts order</inlineHelpText>
        <label>Contact Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_CourierCode__c</fullName>
        <description>Courier Code</description>
        <inlineHelpText>Courier Code</inlineHelpText>
        <label>Courier Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_DestinationName1__c</fullName>
        <description>Destination Name1</description>
        <inlineHelpText>Destination Name1</inlineHelpText>
        <label>Company</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_DestinationName2__c</fullName>
        <description>Destination Name2</description>
        <inlineHelpText>Destination Name2</inlineHelpText>
        <label>Care Of</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_DestinationName3__c</fullName>
        <description>Destination Name3</description>
        <inlineHelpText>All couriers require a phone number</inlineHelpText>
        <label>Phone</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Expected_Delivery_Date__c</fullName>
        <description>Denotes the expected delivery date of the parts order</description>
        <inlineHelpText>Denotes the expected delivery date of the parts order</inlineHelpText>
        <label>Expected Delivery Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_ExternalId__c</fullName>
        <externalId>true</externalId>
        <inlineHelpText>SAP Quote Number or SAP Shipment Number or SAP Delivery Number</inlineHelpText>
        <label>SAP Number</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>SMAX_PS_Global_To_Country__c</fullName>
        <inlineHelpText>List of SAP Country values.</inlineHelpText>
        <label>To Country</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>SAP_Countries</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>SMAX_PS_Global_To_State__c</fullName>
        <description>Global to state field that will capture the state codes to support SAP integration and is dependent on SMAX_PS_Global_To_Country__c</description>
        <inlineHelpText>Global to state field that will capture the state codes to support SAP integration and is dependent on SMAX_PS_Global_To_Country__c</inlineHelpText>
        <label>To State</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>SMAX_PS_Global_To_Country__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>00</fullName>
                </value>
                <value>
                    <fullName>001</fullName>
                </value>
                <value>
                    <fullName>002</fullName>
                </value>
                <value>
                    <fullName>003</fullName>
                </value>
                <value>
                    <fullName>004</fullName>
                </value>
                <value>
                    <fullName>005</fullName>
                </value>
                <value>
                    <fullName>006</fullName>
                </value>
                <value>
                    <fullName>007</fullName>
                </value>
                <value>
                    <fullName>008</fullName>
                </value>
                <value>
                    <fullName>009</fullName>
                </value>
                <value>
                    <fullName>01</fullName>
                </value>
                <value>
                    <fullName>010</fullName>
                </value>
                <value>
                    <fullName>011</fullName>
                </value>
                <value>
                    <fullName>012</fullName>
                </value>
                <value>
                    <fullName>013</fullName>
                </value>
                <value>
                    <fullName>014</fullName>
                </value>
                <value>
                    <fullName>015</fullName>
                </value>
                <value>
                    <fullName>016</fullName>
                </value>
                <value>
                    <fullName>017</fullName>
                </value>
                <value>
                    <fullName>018</fullName>
                </value>
                <value>
                    <fullName>019</fullName>
                </value>
                <value>
                    <fullName>01-AP-Andra Pradesh</fullName>
                </value>
                <value>
                    <fullName>02</fullName>
                </value>
                <value>
                    <fullName>020</fullName>
                </value>
                <value>
                    <fullName>021</fullName>
                </value>
                <value>
                    <fullName>02-AR-Arunachal Pradesh</fullName>
                </value>
                <value>
                    <fullName>03</fullName>
                </value>
                <value>
                    <fullName>030</fullName>
                </value>
                <value>
                    <fullName>03-AS-Assam</fullName>
                </value>
                <value>
                    <fullName>04</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SMAX_PS_IsDropShip__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Is Drop Ship</description>
        <inlineHelpText>Is Drop Ship</inlineHelpText>
        <label>Is Drop Ship</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Is_APAC_Parts_Order__c</fullName>
        <description>Denotes that the record is an APAC Parts Order</description>
        <formula>IF(
(
TEXT(SMAX_PS_Global_To_Country__c) ==&apos;CN-China&apos; ||
TEXT(SMAX_PS_Global_To_Country__c) ==&apos;BR-Brazil&apos; ||
TEXT(SMAX_PS_Global_To_Country__c) ==&apos;CL-Chile&apos; ||
TEXT(SMAX_PS_Global_To_Country__c) ==&apos;IN-India&apos; ||
TEXT(SMAX_PS_Global_To_Country__c) ==&apos;JP-Japan&apos; ||
TEXT(SMAX_PS_Global_To_Country__c) ==&apos;KP-North Korea&apos; ||
TEXT(SMAX_PS_Global_To_Country__c) ==&apos;KR-South Korea&apos; ||
TEXT(SMAX_PS_Global_To_Country__c) ==&apos;MY-Malaysia&apos; ||
TEXT(SMAX_PS_Global_To_Country__c) ==&apos;SG-Singapore&apos; ||
TEXT(SMAX_PS_Global_To_Country__c) ==&apos;TW-Taiwan&apos; ||
TEXT(SMAX_PS_Global_To_Country__c) ==&apos;TH-Thailand&apos;
)
&amp;&amp;
(
((CreatedBy.Id != $User.Id &amp;&amp; $Profile.Name== &apos;SVMX PS - Service Manager - Platform&apos;) ||
($Profile.Name== &apos;SVMX PS - APAC Field Engineer - Platform&apos;) || ($Profile.Name== &apos;SVMX PS - Field Engineer - Platform&apos;)
) &amp;&amp;
($Profile.Name != &apos;SVMX PS - APAC Service Manager - Platform&apos;)
)
,
TRUE,
FALSE)

/*

2019.02.25 ZM - per Carolyn on SVMXCFG-1012: &apos;Please open the APAC parts order Submit for Approval wizard for all of APAC field service engineers with the exception of Australia&apos;

IF( TEXT(SMAX_PS_Global_To_Country__c) == &apos;AU-Australia&apos; ||
,
TRUE,
FALSE)
*/</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Denotes that the record is an APAC Parts Order</inlineHelpText>
        <label>Is APAC Parts Order?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Is_Hybrid_Profile__c</fullName>
        <description>Denotes that the parts order was created by a hybrid profile</description>
        <formula>IF($Profile.Name = &apos;SVMX PS - Field Engineer&apos; || $Profile.Name = &apos;SVMX PS - Service Manager&apos; || $Profile.Name = &apos;SVMX PS - Tech Support/FSE Profile&apos;, True,False)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Denotes that the parts order was created by a hybrid profile</inlineHelpText>
        <label>Is Hybrid Profile</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Language__c</fullName>
        <description>Language on the parts order</description>
        <inlineHelpText>Language on the parts order</inlineHelpText>
        <label>Language</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_My_Drop_Ship_Locations__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Denotes my parts request location</description>
        <inlineHelpText>Denotes my parts request location</inlineHelpText>
        <label>My Drop Ship Locations</label>
        <referenceTo>SMAX_PS_Drop_Ship_Locations__c</referenceTo>
        <relationshipLabel>Parts Orders</relationshipLabel>
        <relationshipName>Parts_Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_OrderDescription__c</fullName>
        <description>Denotes the description for the parts order</description>
        <inlineHelpText>Denotes the description for the parts order</inlineHelpText>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Platform_Event_Log__c</fullName>
        <formula>HYPERLINK(&quot;/apex/SMAX_PS_PlatformEventLog?RelatedID=&quot; &amp; Id &amp; &quot;&amp;RelatedName=&quot; &amp; Name, &quot;View&quot;)</formula>
        <label>Platform Event Log</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_RelatedExternalId__c</fullName>
        <description>Related External ID</description>
        <inlineHelpText>Service Logistics Confirmation Service Order number</inlineHelpText>
        <label>Related External ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Requested_Delivery_Date__c</fullName>
        <description>Denotes the requested delivery date of the parts order</description>
        <inlineHelpText>Denotes the requested delivery date of the parts order</inlineHelpText>
        <label>Requested Delivery Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_SalesOrg__c</fullName>
        <description>Sales Organization</description>
        <inlineHelpText>Sales Organization</inlineHelpText>
        <label>Sales Org</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_ShipTo_ExtId__c</fullName>
        <label>Ship To Customer Number</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_ShipTo__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Ship To Customer</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Parts Orders (Ship To Customer)</relationshipLabel>
        <relationshipName>PartsOrderShipTos</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Ship_To_Account_Address__c</fullName>
        <description>Displays Ship To account address from either work order or location, populated by SFM mapping.</description>
        <inlineHelpText>Parts order will be shipped to this address if &quot;Is Drop Ship&quot; checkbox is not selected.</inlineHelpText>
        <label>Ship To Account Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Ship_to_Address__c</fullName>
        <formula>SVMXC__Company__r.ShippingStreet + &quot; &quot; + 
SVMXC__Company__r.ShippingCity + BR() + 
SVMXC__Company__r.ShippingState + &quot; &quot; + 
SVMXC__Company__r.ShippingPostalCode + BR() + 
SVMXC__Company__r.ShippingCountry</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Ship to Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_SoldTo_ExtId__c</fullName>
        <label>Sold To Customer Number</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Sold_To_Partner__c</fullName>
        <description>For Parts Order Requests, returns the Destination Locations External ID if available, and if not then the Technician&apos;s Inventory Location External ID.</description>
        <formula>IF( ISBLANK( SVMXC__Destination_Location__c ) ,
  SMAX_PS_Technician__r.SVMXC__Inventory_Location__r.SVMX_PS_External_ID__c,
  SVMXC__Destination_Location__r.SVMX_PS_External_ID__c )</formula>
        <inlineHelpText>For Parts Order Requests, returns the Destination Locations External ID if available, and if not then the Technician&apos;s Inventory Location External ID.</inlineHelpText>
        <label>Sold To Partner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_TechnicianSalesOrg__c</fullName>
        <description>Used to capture the assigned technician storage location sales org.</description>
        <inlineHelpText>Assigned technician storage location sales org.</inlineHelpText>
        <label>Technician Sales Org</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Technician_Email__c</fullName>
        <description>Denotes the technician email</description>
        <inlineHelpText>Denotes the technician email</inlineHelpText>
        <label>Technician Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Technician_Manager_Email__c</fullName>
        <description>Manager email associated with the owner of the parts order</description>
        <inlineHelpText>Manager email associated with the owner of the parts order</inlineHelpText>
        <label>Technician Manager Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Technician__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Technician</label>
        <referenceTo>SVMXC__Service_Group_Members__c</referenceTo>
        <relationshipLabel>Parts Orders</relationshipLabel>
        <relationshipName>Parts_Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_ToStreet1__c</fullName>
        <label>To Street 1</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_ToStreet2__c</fullName>
        <label>To Street 2</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_ToStreet3__c</fullName>
        <label>To Street 3</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_TrackingURL__c</fullName>
        <description>Tracking URL</description>
        <inlineHelpText>Tracking URL</inlineHelpText>
        <label>Tracking URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Transportation_Zone__c</fullName>
        <description>Required by SAP for a Parts Order.</description>
        <inlineHelpText>Required by SAP for a Parts Order.</inlineHelpText>
        <label>Transportation Zone</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Work_Order_Billing_Type__c</fullName>
        <formula>TEXT(SVMXC__Service_Order__r.SVMXC__Billing_Type__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Work Order Billing Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SVMX_PS_Cancelation_Reason__c</fullName>
        <description>Reasons for canceling a parts order</description>
        <inlineHelpText>Reasons for canceling a parts order</inlineHelpText>
        <label>Cancelation Reason</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SVMX_PS_Canceled_Date_Time__c</fullName>
        <description>Denotes the date/time that the parts order was canceled</description>
        <inlineHelpText>Denotes the date/time that the parts order was canceled</inlineHelpText>
        <label>Canceled Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>SVMX_PS_Courier__c</fullName>
        <description>Courier used for the return or shipment</description>
        <inlineHelpText>Courier used for the return or shipment</inlineHelpText>
        <label>Courier</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Fed Ex</fullName>
                </value>
                <value>
                    <fullName>UPS</fullName>
                </value>
                <value>
                    <fullName>DHL</fullName>
                </value>
                <value>
                    <fullName>USPS</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SVMX_PS_RMA_Reason__c</fullName>
        <label>RMA Reason</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>DOA</fullName>
                </value>
                <value>
                    <fullName>Damaged Shipment</fullName>
                </value>
                <value>
                    <fullName>Excess Stock</fullName>
                </value>
                <value>
                    <fullName>Wrong Part Received</fullName>
                </value>
                <value>
                    <fullName>ECO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SVMX_PS_Submitted_to_ERP_Date_Time__c</fullName>
        <description>Date/Time that Parts Order was submitted to ERP</description>
        <inlineHelpText>Date/Time that Parts Order was submitted to SAP</inlineHelpText>
        <label>Submitted to SAP Date/Time</label>
        <type>DateTime</type>
    </fields>
    <recordTypes>
        <fullName>Delivery</fullName>
        <active>true</active>
        <label>Delivery</label>
    </recordTypes>
    <recordTypes>
        <fullName>Loaner</fullName>
        <active>true</active>
        <label>Loaner</label>
    </recordTypes>
    <recordTypes>
        <fullName>Request</fullName>
        <active>true</active>
        <label>Request</label>
    </recordTypes>
</CustomObject>